@@ -1,0 +1,3 @@
+{
+  "local_config_file": "mcat_local.json"
+}
